[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bokeh-garden"
version = "0.0.14"
description = "Additional widgets for Bokeh"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Egil Moeller", email = "em@emeraldgeo.no" }
]
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.0.0",
    "streaming-form-data",
    "contextvars",
]

[project.urls]
Homepage = "https://github.com/EMeraldGeo/BokehGarden"
Repository = "https://github.com/EMeraldGeo/BokehGarden"

[tool.setuptools.packages.find]
where = ["."]
